src/test/deca/syntax/invalid/class/method/missing_return_type_11.deca
// Description:
//    Tests a syntactically incorrect program for a method declaration missing a return type
//
// Results:
//    Line 11 : Error, expected return type.
//
// History:
//    created on 07/01/2025

class TestClass {
    methodName() {
        int a = 10;
    }
}